[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name            = "poh-sdk"
version         = "0.3.1"
description     = "Proof of Human SDK — scan wallets, poll async jobs, access signal methods"
readme          = "README.md"
license         = { text = "MIT" }
requires-python = ">=3.8"
keywords        = ["proof-of-human", "identity", "solana", "wallet", "web3"]
dependencies    = ["httpx>=0.27"]

[project.optional-dependencies]
dev  = ["pytest", "pytest-asyncio", "respx"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
